# music_recommendation

./: Dockerfile  README.md  __init__.py  best_model.pth  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  testing.py  train_dqn.py
agent/: baseline_agent.py  dqn_agent.py
server/: __init__.py  app.py  music_recommendation_environment.py
